# aiLabs-Rep

./: .gitignore
ailab1/lab-steering1/code/: CMakeLists.txt  steering0.cpp  steering1.cpp  steering2.cpp
ailab2/lab-steering2/code/: CMakeLists.txt  steering3.cpp
ailab2/lab-steering2/code/build[HOME]/: ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj.filters
ailab2/lab-steering2/code/build[HOME]/steering3.dir/Debug/: steering3.exe.recipe
ailab2/lab-steering2/code/build[HOME]/steering3.dir/Debug/steering3.tlog/: CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.write.1.tlog
ailab2/lab-steering2/code/build[HOME]/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
ailab2/lab-steering2/code/build[HOME]/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
ailab3/lab-steering3/code/: CMakeLists.txt  steering4.cpp
ailab3/lab-steering3/code/[C]build/: ALL_BUILD.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  lab-steering-week3.sln  steering4.vcxproj  steering4.vcxproj.filters
ailab3/lab-steering3/code/[C]build/Debug/: steering4.ilk
ailab5/1_lab_examples/: CMakeLists.txt  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp  lab7.cpp  notes.md  solution-lab3.cpp  solution-lab6.cpp
ailab5/1_lab_examples/original Lab files/: lab1.cpp  lab2.cpp  lab3.cpp  lab4.cpp  lab5.cpp  lab6.cpp  lab7.cpp
ailab5/2_gecode_examples/: CMakeLists.txt
ailab5/Gecode/include/gecode/flatzinc/: parser.tab.hh
ailab5/Gecode/include/gecode/kernel/: var-imp.hpp  var-type.hpp
ailab5/Gecode/include/gecode/support/: config.hpp
assignment1-astar-steering/assignment1-astar-steering/code/: CMakeLists.txt  astar-steering-assignment.cpp  astar-steering-assignment.hpp  graph-utils.hpp  graph.hpp  ship.hpp
assignment1-astar-steering/assignment1-astar-steering/code/steering/: align.hpp  arrive.hpp  blended-steering.hpp  follow-path.hpp  kinematic.hpp  path.hpp  seek.hpp  steering-output.hpp
pathfinding-lab/astar-cities/: CMakeLists.txt  astar-cities.cpp  astar-cities[old].cpp
pathfinding-lab/redblob_code/: CMakeLists.txt  breadth_first_early_exit.cpp
vcpkg-export-20220111-084639/installed/vcpkg/info/: blas_1_x64-windows.list  boost-any_1.77.0_x64-windows.list  boost-atomic_1.77.0_x64-windows.list  boost-build_1.77.0_x64-windows.list  boost-chrono_1.77.0_x64-windows.list  boost-config_1.77.0_x64-windows.list  boost-container_1.77.0_x64-windows.list  boost-date-time_1.77.0_x64-windows.list  boost-graph_1.77.0_x64-windows.list  boost-math_1.77.0_x64-windows.list  boost-modular-build-helper_1.77.0_x64-windows.list  boost-property-map_1.77.0_x64-windows.list  boost-random_1.77.0_x64-windows.list  boost-regex_1.77.0_x64-windows.list  boost-serialization_1.77.0_x64-windows.list  boost-system_1.77.0_x64-windows.list  boost-thread_1.77.0_x64-windows.list  boost-utility_1.77.0_x64-windows.list  dlib_19.22_x64-windows.list  fftw3_3.3.10_x64-windows.list  giflib_5.2.1_x64-windows.list  hdf5_1.12.1_x64-windows.list  lapack-reference_3.8.0_x64-windows.list  lapack_3_x64-windows.list  leptonica_1.81.1_x64-windows.list  libarchive_3.5.2_x64-windows.list  libiconv_1.16_x64-windows.list  libjpeg-turbo_2.1.2_x64-windows.list  libwebp_1.2.1_x64-windows.list  libxml2_2.9.12_x64-windows.list  lz4_1.9.3_x64-windows.list  openblas_0.3.15_x64-windows.list  opencv4_4.5.4_x64-windows.list  opencv_4.5.4_x64-windows.list  openjpeg_2.4.0_x64-windows.list  quirc_1.1_x64-windows.list  raylib_4.0.0_x64-windows.list  szip_2.1.1_x64-windows.list  tesseract_4.1.1_x64-windows.list  tiff_4.3.0_x64-windows.list  (+2 more)
vcpkg-export-20220111-084639/installed/x64-windows/debug/lib/: libhdf5.settings
vcpkg-export-20220111-084639/installed/x64-windows/include/dlib/: config.h
vcpkg-export-20220111-084639/installed/x64-windows/include/openblas/: openblas_config.h
vcpkg-export-20220111-084639/installed/x64-windows/lib/: libhdf5.settings
vcpkg-export-20220111-084639/installed/x64-windows/lib/pkgconfig/: blas.pc  dlib-1.pc  fftw3.pc  fftw3f.pc  fftw3l.pc  lapack.pc  openblas.pc  szip.pc
vcpkg-export-20220111-084639/installed/x64-windows/share/WebP/: WebPConfig.cmake  WebPTargets.cmake
vcpkg-export-20220111-084639/installed/x64-windows/share/blas/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-algorithm/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-align/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-any/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-array/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-assert/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-atomic/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-bimap/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-bind/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-build/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-chrono/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-concept-check/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-config/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-container/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-container-hash/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-conversion/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-core/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-date-time/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-detail/: vcpkg_abi_info.txt
vcpkg-export-20220111-084639/installed/x64-windows/share/boost-endian/: vcpkg_abi_info.txt
(+152 files in other folders)
